# InSoMniA

./: CMakeLists.txt  README.md
include/func/: func.h
include/function/: function.h
include/matrix_solver/: KKT_solver.h
include/optimizer/: optimizer.h
include/svm/: svm.hpp
include/utility/: function_utility.h  interpolation.h  interpolcation.h  kkt_util.h  line_search.h  matrix_utility.h
src/: CMakeLists.txt
src/func/: func.cpp
src/function/: function.cpp
src/matrix_solver/: KKT_solver.cpp
src/optimizer/: optimizer.cpp
src/svm/: svm.cpp
src/utility/: function_utility.cpp  matrix_utility.cpp
test/: ActiveSet_Test.cpp  CMakeLists.txt  Eqc_KKT_Test.cpp  OptimizerTest.cpp  SVM_Test.cpp  Sparse_ActiveSet_Test.cpp  petsc_test.cpp  petsc_test_parallel.cpp
