add_executable(OptimizerTest OptimizerTest.cpp ${INSOMNIA_HEADER})
add_executable(Eqc_KKT_Test Eqc_KKT_Test.cpp ${INSOMNIA_HEADER})
#add_executable(petsc_test petsc_test.cpp)
#add_executable(petsc_test_parallel petsc_test_parallel.cpp)
add_executable(ActiveSet_Test ActiveSet_Test.cpp ${INSOMNIA_HEADER})
add_executable(Sparse_ActiveSet_Test Sparse_ActiveSet_Test.cpp ${INSOMNIA_HEADER})
add_executable(svm_test SVM_Test.cpp)

target_link_libraries(OptimizerTest InSoMniA)
target_link_libraries(Eqc_KKT_Test InSoMniA)
#target_link_libraries(petsc_test ${PETSC_LIBRARIES})
#target_link_libraries(petsc_test_parallel ${PETSC_LIBRARIES})
target_link_libraries(ActiveSet_Test InSoMniA gtest_main)
target_link_libraries(Sparse_ActiveSet_Test InSoMniA gtest_main)
target_link_libraries(svm_test InSoMniA)

#add_test(OptimizerTest OptimizerTest)
#add_test(Eqc_KKT_Test Eqc_KKT_Test)
add_test(NAME ActiveSet_Test COMMAND ActiveSet_Test)
add_test(NAME Sparse_ActiveSet_Test COMMAND Sparse_ActiveSet_Test)
